add google analytics

--- a/index.html
+++ b/index.html
@@ -23,7 +23,38 @@
     <link rel="stylesheet" href="css/aos.css">
 
     <link rel="stylesheet" href="css/style.css">
-    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-140297906-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-140297906-1');
+</script>
+
+  <!-- Marcação JSON-LD -->
+  <script type="application/ld+json">
+    { "@context": "https://schema.org", 
+     "@type": "Article",
+     "keywords": "banco de dados SGBD Concorrencia", 
+   },
+   "headline": "Article headline",
+     "name": "Sistemas de Banco de Dados",
+     "description": "Artigo escrito sobre sistemas de banco de dados",
+			"author": {
+				"@type": "Person",
+				"name": "Maria Cristina D. Ribeiro"
+			},
+      "publisher": {
+				"@type": "Organization",
+				"name": "Github Pages",
+			},
+      "articleSection": "Apresentação",
+			"articleBody": "Na sociedade moderna, os sistemas de bancos de bancos estão intrinsicamente ligados a vida das pessoas. Existem vários tipos de banco de dados, desde mais simples até outros muito complexos.",
+			"url": "https://merycristimas.github.io/"
+		}
+    </script>    
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
   
@@ -293,28 +324,7 @@
   
     
   </div> <!-- .site-wrap -->
-  <!-- Marcação JSON-LD -->
-  <script type="application/ld+json">
-    { "@context": "https://schema.org", 
-     "@type": "Article",
-     "keywords": "banco de dados SGBD Concorrencia", 
-   },
-   "headline": "Article headline",
-     "name": "Sistemas de Banco de Dados",
-     "description": "Artigo escrito sobre sistemas de banco de dados",
-			"author": {
-				"@type": "Person",
-				"name": "Maria Cristina D. Ribeiro"
-			},
-      "publisher": {
-				"@type": "Organization",
-				"name": "Github Pages",
-			},
-      "articleSection": "Apresentação",
-			"articleBody": "Na sociedade moderna, os sistemas de bancos de bancos estão intrinsicamente ligados a vida das pessoas. Existem vários tipos de banco de dados, desde mais simples até outros muito complexos.",
-			"url": "https://merycristimas.github.io/"
-		}
-    </script>
+
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
   <script src="js/jquery-ui.js"></script>
